<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="note_new_button">Add Note</string>
    <string name="plan_new_button">New Plan</string>
    <string name="plan_index_button">View Plan History</string>
    <string name="plan_new_save_button">Save Plan</string>

    <string name="welcome">Welcome to CareSnap</string>
    <string name="app_name">CareSnap</string>
    <string name="action_settings">Settings</string>
    <string name="capture">New Summary</string>
    <string name="record_edit_text">Type or voice-record visit summary</string>
    <string name="record_button">Record</string>
    <string name="save_note">Save</string>
    <string name="view">View Summaries</string>
    <string name="title_activity_impression">Patient\'s Visits</string>
    <string name="date_time">Date Time</string>
    <string name="physician_label">Physician\'s name:</string>
    <string name="title_activity_create_impression">New Visit</string>
    <string name="clinic_label">Clinic name:</string>
    <string name="speciality_prompt">Choose Specialty</string>
    <string name="save_impression">Save</string>
    <string name="doctor_prompt">Select Physician</string>
    <string name="action_new_visit">New Visit</string>
    <string name="new_note_title">New Note</string>
    <string name="view_note_title">View Note</string>
    <string name="username"> Patient X</string>
    <string name="add_physician">Add New physician</string>
    <string name="visit_view_by">by:</string>
    <string name="visit_view_at">at:</string>
    <string name="visit_view_seen_on">seen on:</string>
    <string name="confirm_save">Save</string>
    <string-array name="specialties">
        <item>Choose Specialty</item>
        <item>General</item>
        <item>Neurology</item>
        <item>Endocrinology</item>
        <item>Cardiology</item>
        <item>Gastroenterology</item>
        <item>Surgery</item>
        <item>Psychiatry</item>
        <item>Psychology</item>
        <item>Physiotherapy</item>
        <item>Dermatology</item>
    </string-array>

</resources>