<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/impression_new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_new_button" />

    <Button
        android:id="@+id/impression_index_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_index_button" />

</LinearLayout>