<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:parentActivityName="com.health.caresnap.CareSnapMainActivity"
    tools:context=".CreateImpressionActivity" >

    <TextView
        android:id="@id/date_time_textview"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/practitioner_label"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </EditText>

    <Spinner
        android:id="@+id/speciality_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/speciality_arrays"
        android:prompt="@string/speciality_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/clinic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/clinic_label"
        android:textAppearance="?android:attr/textAppearanceLarge" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/capture_create_impr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#ee82ee"
            android:gravity="center"
            android:text="@string/capture"
            android:textColor="#000" />
    </RelativeLayout>

</LinearLayout>